tests/errors/semantic/non_blocking/PRIMITIVE_IMMUTABLE_RESTRICTION_IS.py
@types('int', 'int')
def compare_is_int_int(a, b):
    return a is b
